Fix modal alignement on phone

--- a/components/kmeet_conference/ringing_dialog.scss
+++ b/components/kmeet_conference/ringing_dialog.scss
@@ -55,5 +55,9 @@
                 }
             }
         }
+        @media (max-width: 768px) {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 }
